# dedup

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  install.sh  justfile  knope.toml
.changeset/: fix-arch-build-release.md
.github/workflows/: prepare_release.yml  release.yml
app/: package-lock.json  package.json  pnpm-lock.yaml
app/src/: app.css  app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  main.rs  workspace.rs
app/src/lib/api/: tauri.ts
app/src/lib/components/: AppShell.svelte  FileDetails.svelte  FileTree.svelte  StatsPage.svelte  TreeNode.svelte
app/src/lib/components/scan/: CustomScanRuleEditor.svelte  CustomScanRuleList.svelte  ScanDialog.svelte  ScanPresetList.svelte  ScanProgressPanel.svelte
app/src/lib/state/: app.svelte.ts
app/src/routes/: +layout.svelte  +page.svelte
app/src/routes/scan/: +page.svelte
crates/dedup-cli/: Cargo.toml
crates/dedup-cli/src/: main.rs
crates/dedup-core/: Cargo.toml
crates/dedup-core/src/: cid.rs  content_store.rs  lib.rs  metadata.rs  scanner.rs  types.rs
crates/dedup-core/tests/: equivalence.rs
docs/: RELEASING.md
docs/superpowers/plans/: 2026-07-01-git-directory-bundling.md  2026-07-01-scan-rules.md  2026-07-01-ui-component-redesign.md
docs/superpowers/specs/: 2026-07-01-git-directory-bundling-design.md  2026-07-01-parallel-scan-design.md  2026-07-01-scan-rules-design.md  2026-07-01-ui-component-redesign-design.md
pkg/arch/: PKGBUILD  dedup.desktop
(+11 files in other folders)
