[package]
name = "dedup-core"
version = "0.1.4"
edition.workspace = true
license.workspace = true

[dependencies]
blake3 = "1.8"
cid = "0.11"
multihash-codetable = { version = "0.1", features = ["blake3"] }
redb = "2.6"
regex = "1"
lz4_flex = "0.11"
walkdir = "2.5"
jwalk = "0.8"
rayon = "1"
tar = "0.4"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
